spacing for each of the service description

--- a/services/index.html
+++ b/services/index.html
@@ -17,31 +17,31 @@ active: services
       <div class=" [ col-lg-12 col-md-12 col-sm-12 col-xs-12 ] text-center">
         <h4>"We provide high quality music"</h4>
       </div>
-    </div> 
+    </div>
   </div>
-</div>  
+</div>
 
 <!-- CONTENT -->
-<div class="contentbox-bgwhite font-override_quark">
+<div class="services contentbox-bgwhite font-override_quark">
   <div class="container">
     <div class="row">
-      <h1 class="text-center mb">Custom Collection</h1>
+      <h1 class="services_title text-center mb">Custom Collection</h1>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <img class="img-responsive center-block shadow-image" src="{{"/assets/img/services/customcol.jpg" | prepend: site.url }}">
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-        <h3>ชุดดนตรีที่จัดทำพิเศษขึ้นมาเพื่อใช้เฉพาะในงานของท่าน ประกอบไปด้วยธีม และเพลงอารมณ์แบบต่างๆ เหมาะกับการใช้งานประเภท TV Series, Sitcom หรือภาพยนต์ก็ได้เช่นกัน หรือท่านสามารถเลือกจาก collection ที่เรามีอยู่แล้วก็ได้ เร็วๆนี้</h3>
+        <h4 class="services_description">ชุดดนตรีที่จัดทำพิเศษขึ้นมาเพื่อใช้เฉพาะในงานของท่าน ประกอบไปด้วยธีม และเพลงอารมณ์แบบต่างๆ เหมาะกับการใช้งานประเภท TV Series, Sitcom หรือภาพยนต์ก็ได้เช่นกัน หรือท่านสามารถเลือกจาก collection ที่เรามีอยู่แล้วก็ได้ เร็วๆนี้</h4>
       </div>
     </div>
   </div>
 </div>
 
-<div class="contentbox-bginversed font-override_quark">
+<div class="services contentbox-bginversed font-override_quark">
   <div class="container">
     <div class="row">
-      <h1 class="text-center mb">Loop Music</h1>
+      <h1 class="services_title text-center mb">Loop Music</h1>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-        <h3>ดนตรีที่สามารถวนซ้ำได้เพื่อใช้ในงาน multimedia ต่างๆเช่น เกมส์, infographic, presetation โดยให้เพลงวนซ้ำและไม่ต้องกังวลเรื่องความยาวของเพลง</h3>
+        <h4 class="services_description">ดนตรีที่สามารถวนซ้ำได้เพื่อใช้ในงาน multimedia ต่างๆเช่น เกมส์, infographic, presetation โดยให้เพลงวนซ้ำและไม่ต้องกังวลเรื่องความยาวของเพลง</h4>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <img class="img-responsive center-block shadow-image" src="{{"/assets/img/services/loopmusic.jpg" | prepend: site.url }}">
@@ -50,26 +50,26 @@ active: services
   </div>
 </div>
 
-<div class="contentbox-bgwhite font-override_quark">
+<div class="services contentbox-bgwhite font-override_quark">
   <div class="container">
     <div class="row">
-      <h1 class="text-center mb">Mockup Score</h1>
+      <h1 class="services_title text-center mb">Mockup Score</h1>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <div class="fitvidsjs"><iframe class="shadow-image" src="https://player.vimeo.com/video/130059898?portrait=0&byline=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-        <h4>การทำดนตรีออกมาจากโน๊ต score หรือ midi ในระดับเล็กไปจนถึงระดับ orchestra ของท่านด้วยเสียงที่สมจริงยิ่งขึ้น เพื่อที่จะใช้เป็น demo, หรือสำเร็จเป็นผลงานเลยได้เช่นกัน</h4>
+        <h4 class="services_description">การทำดนตรีออกมาจากโน๊ต score หรือ midi ในระดับเล็กไปจนถึงระดับ orchestra ของท่านด้วยเสียงที่สมจริงยิ่งขึ้น เพื่อที่จะใช้เป็น demo, หรือสำเร็จเป็นผลงานเลยได้เช่นกัน</h4>
       </div>
     </div>
   </div>
 </div>
 
-<div class="contentbox-bginversed font-override_quark">
+<div class="services contentbox-bginversed font-override_quark">
   <div class="container">
     <div class="row">
-      <h1 class="text-center mb">Stock Music</h1>
+      <h1 class="services_title text-center mb">Stock Music</h1>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-        <h4>ดนตรีรูปแบบจบในเพลงในอารมณ์ต่างๆให้ท่านได้เลือกนำไปใช้ในภาพยนต์ หรือสื่อ multimedia มากมายเช่น Trailer, โฆษณา, เกมส์ หรือ ภาพยนต์ก็ได้เช่นกัน</h4>
+        <h4 class="services_description">ดนตรีรูปแบบจบในเพลงในอารมณ์ต่างๆให้ท่านได้เลือกนำไปใช้ในภาพยนต์ หรือสื่อ multimedia มากมายเช่น Trailer, โฆษณา, เกมส์ หรือ ภาพยนต์ก็ได้เช่นกัน</h4>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <img class="img-responsive center-block shadow-image" src="{{"/assets/img/services/stock.jpg" | prepend: site.url }}">
