changing spacing on each markup page
make it match new font

--- a/services/index.html
+++ b/services/index.html
@@ -30,6 +30,7 @@ active: services
         <img class="img-responsive center-block shadow-image" src="{{"/assets/img/services/customcol.jpg" | prepend: site.url }}">
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+      <br class="hidden-lg hidden-md hidden-sm"/>
         <h4 class="services_description">ชุดดนตรีที่จัดทำพิเศษขึ้นมาเพื่อใช้เฉพาะในงานของท่าน ประกอบไปด้วยธีม และเพลงอารมณ์แบบต่างๆ เหมาะกับการใช้งานประเภท TV Series, Sitcom หรือภาพยนต์ก็ได้เช่นกัน หรือท่านสามารถเลือกจาก collection ที่เรามีอยู่แล้วก็ได้ เร็วๆนี้</h4>
       </div>
     </div>
@@ -42,6 +43,7 @@ active: services
       <h2 class="services_title text-center mb">Loop Music</h2>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <h4 class="services_description">ดนตรีที่สามารถวนซ้ำได้เพื่อใช้ในงาน multimedia ต่างๆเช่น เกมส์, infographic, presetation โดยให้เพลงวนซ้ำและไม่ต้องกังวลเรื่องความยาวของเพลง</h4>
+        <br class="hidden-lg hidden-md hidden-sm"/>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <img class="img-responsive center-block shadow-image" src="{{"/assets/img/services/loopmusic.jpg" | prepend: site.url }}">
@@ -58,6 +60,7 @@ active: services
         <div class="fitvidsjs"><iframe class="shadow-image" src="https://player.vimeo.com/video/130059898?portrait=0&byline=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+      <br class="hidden-lg hidden-md hidden-sm"/>
         <h4 class="services_description">การทำดนตรีออกมาจากโน๊ต score หรือ midi ในระดับเล็กไปจนถึงระดับ orchestra ของท่านด้วยเสียงที่สมจริงยิ่งขึ้น เพื่อที่จะใช้เป็น demo, หรือสำเร็จเป็นผลงานเลยได้เช่นกัน</h4>
       </div>
     </div>
@@ -70,6 +73,7 @@ active: services
       <h2 class="services_title text-center mb">Stock Music</h2>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <h4 class="services_description">ดนตรีรูปแบบจบในเพลงในอารมณ์ต่างๆให้ท่านได้เลือกนำไปใช้ในภาพยนต์ หรือสื่อ multimedia มากมายเช่น Trailer, โฆษณา, เกมส์ หรือ ภาพยนต์ก็ได้เช่นกัน</h4>
+        <br class="hidden-lg hidden-md hidden-sm"/>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <img class="img-responsive center-block shadow-image" src="{{"/assets/img/services/stock.jpg" | prepend: site.url }}">
