--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,7 @@ active: about
 
       <p>เรานำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด” สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก นักประพันธ์เพลง ที่มากประสบการณ์ ที่เปิดให้คุณสามารถซื้อหรือสั่งทำและนำไปใช้ในโปรเจ็คของคุณได้ทันที ด้วยราคาที่ยุติธรรมทำให้คุณเองก็สามารถมีเพลงดีๆที่ช่วยยกระดับโปรเจ็คของคุณ แม้จะมีงบการเงินที่จำกัด
       </p>
-      
+
       <p>Motion Square Music ก่อตั้งโดยฟิว และ บิว ที่เริ่มต้นรู้จักและทำงานด้วยกันเมื่อปี 2012 ในงานดนตรีประกอบซีรี่ยส์เรื่องหนึ่ง และจากนั้นเราก็แลกเปลี่ยนความคิดกัน จนมาคิดว่าเราควรจะทำ Music Library สำหรับลูกค้าที่ต้องการงานที่เร่งรีบหรืองานที่มีงบประมาณจำกัด เพื่อใช้ประกอบในงานภาพยนตร์โดยไม่ต้องห่วงเรื่องลิขสิทธิ์ แทนที่จะไปเอาเพลงของ คนอื่นมาอย่างผิดกฏหมาย เราทำงานกันออนไลน์ทั่วโลกผ่านอินเทอร์เน็ต และขณะนี้ทั้งฟิวและบิวก็กำลังศึกษาต่อที่สหรัฐอเมริกาด้านดนตรีโดยตรง
       </p>
     </div>
@@ -38,28 +38,28 @@ active: about
       <div class="[ col-lg-2 col-md-2 col-sm-4 col-xs-6 ]  no-padding no-margin">
         <img src="{{ "/assets/img/team/about-1.jpg" | prepend: site.url }}" class="img-responsive about-image" />
       </div>
-    </a>    
+    </a>
     <a href="{{ "/assets/img/team/about-2.jpg" | prepend: site.url }}" data-rel="prettyPhoto">
       <div class="[ col-lg-2 col-md-2 col-sm-4 col-xs-6 ]  no-padding no-margin">
         <img src="{{ "/assets/img/team/about-2.jpg" | prepend: site.url }}" class="img-responsive about-image" />
       </div>
-    </a>    
+    </a>
     <a href="{{ "/assets/img/team/about-3.jpg" | prepend: site.url }}" data-rel="prettyPhoto">
       <div class="[ col-lg-2 col-md-2 col-sm-4 col-xs-6 ]  no-padding no-margin">
         <img src="{{ "/assets/img/team/about-3.jpg" | prepend: site.url }}" class="img-responsive about-image" />
       </div>
-    </a>    
+    </a>
     <a href="{{ "/assets/img/team/about-4.jpg" | prepend: site.url }}" data-rel="prettyPhoto">
       <div class="[ col-lg-2 col-md-2 col-sm-4 col-xs-6 ]  no-padding no-margin">
         <img src="{{ "/assets/img/team/about-4.jpg" | prepend: site.url }}" class="img-responsive about-image" />
       </div>
-    </a>    
+    </a>
     <a href="{{ "/assets/img/team/about-5.jpg" | prepend: site.url }}" data-rel="prettyPhoto">
       <div class="[ col-lg-2 col-md-2 col-sm-4 col-xs-6 ]  no-padding no-margin">
         <img src="{{ "/assets/img/team/about-5.jpg" | prepend: site.url }}" class="img-responsive about-image" />
       </div>
-    </a>    
-    <a href="{{ "/assets/img/team/about-6.jpg" | prepend: site.url }}" data-rel="prettyPhoto">    
+    </a>
+    <a href="{{ "/assets/img/team/about-6.jpg" | prepend: site.url }}" data-rel="prettyPhoto">
       <div class="[ col-lg-2 col-md-2 col-sm-4 col-xs-6 ]  no-padding no-margin">
         <img src="{{ "/assets/img/team/about-6.jpg" | prepend: site.url }}" class="img-responsive about-image" />
       </div>
@@ -95,6 +95,8 @@ active: about
           <br><br>
           ปัจจุบันเป็นนักแต่งเพลงอิสระและกำลังศึกษาต่อที่ UCLA สหรัฐอเมริกา ด้านดนตรีประกอบภาพยนต์</p>
     </div><!--/col-lg-3 -->
+
+    <br class="hidden-lg hidden-md"/>
 
     <div class="composerItem [ col-lg-6 col-md-6 col-sm-6 col-xs-12 ] ">
       <div class="he-wrap tpl6">
