--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@ active: index
   <div class="container">
     <div class="row">
       <div class="[ col-lg-6 col-md-6 col-sm-6 col-xs-12 ]">
+        <img class="img-responsive hidden-lg hidden-md hidden-sm hidden-xs" src="{{"/assets/img/showcase/show6.jpg" | prepend: site.url }}" alt="">
+
         <h3 class="text-center">ให้ดนตรีช่วยเล่าเรื่องราวของคุณ</h3>
           <p class="text-justify">Motion Square Music เราคือ Music Library ที่จำหน่ายลิขสิทธิ์เพลงประกอบภาพยนต์, Loop เกมส์, และดนตรีสำหรับสื่อบันเทิงต่างๆ แบบ Online เป็นแห่งแรกในประเทศไทย ผลงานของเรารับรองคุณภาพระดับสูงด้วยผลงานกับค่ายหนังและบริษัทโปรดักชั่นชั้นนำของประเทศไทย เช่น GTH, Kantana Group, วายุฟิล์มโปรดักชั่น, ฯลฯ อีกทั้งยังมีผลงานที่ได้โลดแล่นอยู่บนเทศกาลภาพยนต์นานาชาติมากมาย เช่น Berlin International Film Festival, Busan International Film Festival, และ Vancouver Film Festival เป็นต้น</p>
           <p class="text-justify">เรานำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด” สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer ที่มีประสบการณ์ ที่เปิดให้คุณสามารถซื้อหรือสั่งทำและนำไปใช้ในโปรเจ็คของคุณได้ทันที ด้วยราคาที่ยุติธรรมทำให้คุณเองก็สามารถมีเพลงดีๆที่ช่วยยกระดับโปรเจ็คของคุณ แม้จะมีงบการเงินที่จำกัด</p>
@@ -51,7 +53,7 @@ active: index
         <a href="about" class=" [ btn btn-main btn-block ] center-block">Get to know us</a>
       </div>
       <div class="[ col-lg-6 col-md-6 col-sm-6 col-xs-12 ]">
-        <img class="img-responsive" src="{{"/assets/img/showcase/show6.jpg" | prepend: site.url }}" alt="">
+        <img class="img-responsive hidden-xs" src="{{"/assets/img/showcase/show6.jpg" | prepend: site.url }}" alt="">
       </div>
     </div><!--/row -->
   </div>
