--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@ active: index
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
-        <br><h2>MOTION SQUARE MUSIC</h2>
-        <p>The first ever music library for film, tv, and media in Thailand</p><br>
+        <br/>
+          <h2>MOTION SQUARE MUSIC</h2>
+          <p>The first ever music library for film, tv, and media in Thailand</p>
+        <br/>
       </div>
+
       <div class=" [ col-lg-8 col-lg-offset-2 ] himg">
         <div class="row">
           <div class=" [ col-lg-10 col-lg-offset-1
@@ -18,24 +21,26 @@ active: index
                       col-xs-10 col-xs-offset-1 ] laptop-teaser">
             <div class="embed-responsive embed-responsive-16by9">
               <iframe src="https://player.vimeo.com/video/126772167?title=0&portrait=0&byline=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </div>
+            </div>
           </div>
         </div>
+
         <!-- laptop base -->
         <img src="{{"/assets/img/desktop-cut.png" | prepend: site.url }}" class="img-responsive">
       </div>
+
     </div><!-- /row -->
   </div><!-- /container -->
 </div>
 
 <div id="quote">
-<div class="container">
-  <div class="row">
-    <div class=" [ col-lg-12 col-md-12 col-sm-12 col-xs-12 ] text-center">
-      <h2>เคยไหมที่ต้องขโมยเพลงบนอินเตอร์เน็ตมาใช้</h2>
-      <br/>
-      <h4>เคยไหมที่ไม่สามารถหาเพลงที่ถูกใจมาใช้ในงานของคุณได้ซะที?</h4>
-    </div>
+  <div class="container">
+    <div class="row">
+      <div class=" [ col-lg-12 col-md-12 col-sm-12 col-xs-12 ] text-center">
+        <h2>เคยไหมที่ต้องขโมยเพลงบนอินเตอร์เน็ตมาใช้</h2>
+        <br/>
+        <h4>เคยไหมที่ไม่สามารถหาเพลงที่ถูกใจมาใช้ในงานของคุณได้ซะที?</h4>
+      </div>
     </div>
   </div>
 </div>
@@ -47,17 +52,22 @@ active: index
         <img class="img-responsive hidden-lg hidden-md hidden-sm hidden-xs" src="{{"/assets/img/showcase/show6.jpg" | prepend: site.url }}" alt="">
 
         <h3 class="text-center">ให้ดนตรีช่วยเล่าเรื่องราวของคุณ</h3>
-          <p class="text-justify">Motion Square Music เราคือ Music Library ที่จำหน่ายลิขสิทธิ์เพลงประกอบภาพยนต์, Loop เกมส์, และดนตรีสำหรับสื่อบันเทิงต่างๆ แบบ Online เป็นแห่งแรกในประเทศไทย ผลงานของเรารับรองคุณภาพระดับสูงด้วยผลงานกับค่ายหนังและบริษัทโปรดักชั่นชั้นนำของประเทศไทย เช่น GTH, Kantana Group, วายุฟิล์มโปรดักชั่น, ฯลฯ อีกทั้งยังมีผลงานที่ได้โลดแล่นอยู่บนเทศกาลภาพยนต์นานาชาติมากมาย เช่น Berlin International Film Festival, Busan International Film Festival, และ Vancouver Film Festival เป็นต้น</p>
-          <p class="text-justify">เรานำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด” สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer ที่มีประสบการณ์ ที่เปิดให้คุณสามารถซื้อหรือสั่งทำและนำไปใช้ในโปรเจ็คของคุณได้ทันที ด้วยราคาที่ยุติธรรมทำให้คุณเองก็สามารถมีเพลงดีๆที่ช่วยยกระดับโปรเจ็คของคุณ แม้จะมีงบการเงินที่จำกัด</p>
-          <br/>
+
+        <p class="text-justify">Motion Square Music เราคือ Music Library ที่จำหน่ายลิขสิทธิ์เพลงประกอบภาพยนต์, Loop เกมส์, และดนตรีสำหรับสื่อบันเทิงต่างๆ แบบ Online เป็นแห่งแรกในประเทศไทย ผลงานของเรารับรองคุณภาพระดับสูงด้วยผลงานกับค่ายหนังและบริษัทโปรดักชั่นชั้นนำของประเทศไทย เช่น GTH, Kantana Group, วายุฟิล์มโปรดักชั่น, ฯลฯ อีกทั้งยังมีผลงานที่ได้โลดแล่นอยู่บนเทศกาลภาพยนต์นานาชาติมากมาย เช่น Berlin International Film Festival, Busan International Film Festival, และ Vancouver Film Festival เป็นต้น</p>
+
+        <p class="text-justify">เรานำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด” สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer ที่มีประสบการณ์ ที่เปิดให้คุณสามารถซื้อหรือสั่งทำและนำไปใช้ในโปรเจ็คของคุณได้ทันที ด้วยราคาที่ยุติธรรมทำให้คุณเองก็สามารถมีเพลงดีๆที่ช่วยยกระดับโปรเจ็คของคุณ แม้จะมีงบการเงินที่จำกัด</p>
+        <br/>
+
         <a href="about" class=" [ btn btn-main btn-block ] center-block">Get to know us</a>
       </div>
+
       <div class="[ col-lg-6 col-md-6 col-sm-6 col-xs-12 ]">
         <img class="img-responsive hidden-xs" src="{{"/assets/img/showcase/show6.jpg" | prepend: site.url }}" alt="">
       </div>
     </div><!--/row -->
   </div>
 </div>
+
 <div class="contentbox-bggrey">
   <div class="contentbox--info">
     <h3>OUR MUSIC COLLECTION</h3>
@@ -209,7 +219,7 @@ active: index
     </div>
 
     <div class="row centered">
-      <br><a href="services" class="btn btn-theme">More Service Information</a>
+      <br/><a href="services" class="btn btn-theme">More Service Information</a>
     </div>
   </div><!--/sub container -->
 </div>
