--- a/freestuffs/index.html
+++ b/freestuffs/index.html
@@ -24,7 +24,7 @@ active: freestuffs
         <p class="text-justify">เพลงฟรีจาก <a href="http://www.phil-wc.com/">Phil_wc</a> ถึงสี่อัลบั้มในแนว Ambient, Electronic, Drone, และ Experimental เพลงในอัลบั้มเหล่านี้เคยปรากฏในหนังเทศกาลต่างๆมาแล้วเช่น The 31st Vancouver Film Festival, Canada; The 56th BFI London Film Festival, Great Britain</p>
 
         <p class="text-justify">สามารถนำไปใช้ในงานที่ไม่แสวงหากำไร (non-commercial)ทุกประเภทและสามารถนำไปใช้ได้โดยไม่ต้องขออนุญาต โดยมีเงื่อนไขในการใช้ตามสามข้อด้านข้าง เงื่อนไขรวมไปถึงการนำเพลงไปใช้ในหนังอิสระเพื่อส่งประกวด ได้เช่นกัน
-        <br><b>* หากต้องการนำไปใช้ในงาน commercial โปรดติดต่อเรา</b></p>
+        <br><strong>* หากต้องการนำไปใช้ในงาน commercial โปรดติดต่อเรา</strong></p>
 
         <p>ท่านสามารถบริจาคได้ตามใจชอบโดยกรอกราคาหลังกดปุ่มดาวน์โหลดครับ</p>
     </div>
